# WordLlamaDetect

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  ds_langs.json  pyproject.toml  ruff.toml
.github/workflows/: build.yml  publish.yml  test.yml
configs/: language_populations.yaml
configs/models/: gemma3-1b.yaml  gemma3-27b-init.yaml  gemma3-27b-pruned.yaml.bak  gemma3-27b.yaml  gemma3-4b.yaml  gemma3-supercat.yaml  multi-model.yaml  qwen3-0.5b.yaml
configs/training/: default.yaml  gemma3-1b.yaml  gemma3-27b.yaml  gemma3-4b.yaml  gemma3-supercat.yaml
docs/: architecture.md  languages.md  quantization.md  training.md
docs/analysis/: token-filtering.md  weight-distribution.md
docs/workflows/: token-masking-workflow.md
scripts/analysis/: create_filtered_e3m4_model.py  create_weight_mask.py  plot_token_count_cdf.py  token_frequency_counter.py  weight_analysis.py  weight_cdf.py  zero_unused_weights.py
scripts/docs/: generate_language_docs.py
src/langtoken/: __init__.py  api.py
src/langtoken/cli/: main.py
src/langtoken/config/: loader.py  models.py
src/langtoken/embeddings/: extractor.py  loader.py
src/langtoken/inference/: detector.py  quantization.py  utils.py
src/langtoken/training/: evaluator.py  flores_eval.py  lookup_table.py  trainer.py
src/wldetect/: __init__.py  api.py  config.py
src/wldetect/cli/: main.py
src/wldetect/cli/commands/: __init__.py  create_lookup.py  curate.py  detect.py  eval.py  train.py
src/wldetect/config/: models.py
src/wldetect/embeddings/: README.md  __init__.py  extractor.py  loader.py
src/wldetect/inference/: quantization.py
src/wldetect/models/: model_config.yaml
src/wldetect/training/: evaluator.py  flores_eval.py  lookup_table.py  losses.py  model.py  trainer.py
tests/: conftest.py  test_api.py  test_basic.py  test_config.py  test_dataset.py  test_embeddings_manager.py  test_flores_alignment_report.py  test_flores_mapping.py  test_inference.py  test_lookup_table.py  test_losses.py  test_quantization.py  test_trainer_checkpoints.py  test_trainer_flores.py  test_training_imports.py
